[project]
    authors = [{ name = "Nate Landau", email = "github@natelandau.com" }]
    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
    ]
    dependencies = [
        "apscheduler>=3.11.3,<4.0.0",
        "boto3>=1.43.54,<2.0.0",
        "cappa>=0.32.1,<1.0.0",
        "loguru>=0.7.3",
        "nclutils>=3.4.2,<4.0.0",
        "pydantic-settings>=2.14.2,<3.0.0",
        "pydantic>=2.13.4,<3.0.0",
        "rich>=15.0.0",
        "whenever>=0.10.3,<1.0.0",
    ]
    description = "A simple tool to backup and restore data as tgz files."
    license = "MIT"
    license-files = ["LICENSE"]
    name = "ezbak"
    readme = "README.md"
    requires-python = ">=3.11, <3.15"
    version = "1.3.0"

    [project.urls]
        Homepage   = "https://github.com/natelandau/ezbak"
        Repository = "https://github.com/natelandau/ezbak"

    [project.scripts]
        ezbak = "ezbak.cli:main"

[dependency-groups]
    dev = [
        "commitizen>=4.16.5",
        "coverage>=7.15.2",
        "duty>=1.9.0",
        "moto[s3]>=5.2.2",
        "mypy>=2.3.0",
        "prek>=0.4.10",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=7.1.0",
        "pytest-devtools>=1.2.0",
        "pytest-mock>=3.15.1",
        "pytest-sugar>=1.1.1",
        "pytest>=9.1.1",
        "rich>=15.0.0",
        "ruff>=0.15.22",
        "time-machine>=3.2.0",
        "typos>=1.48.0",
        "yamllint>=1.38.0",
        "zensical>=0.0.51",
    ]

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.11.0,<0.12.0"]

[tool.commitizen]
    bump_message               = "bump(release): v${current_version} → v${new_version}"
    changelog_merge_prerelease = true
    tag_format                 = "v${version}"
    update_changelog_on_bump   = true
    version_files              = ["src/ezbak/constants.py:__version__"]
    version_provider           = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'Run\(\).running',
        'assert_never',
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'if TYPE_CHECKING:',
        'pragma: no cover',
        'time\.sleep',
    ]
    fail_under = 20
    precision = 1
    show_missing = true
    skip_covered = true
    skip_empty = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = ".cache/.coverage"
    source       = ["src"]

[tool.coverage.xml]
    output = ".cache/coverage.xml"

[tool.mypy] # https://mypy.readthedocs.io/en/latest/config_file.html
    cache_dir                   = ".cache/mypy"
    disallow_any_unimported     = false
    disallow_subclassing_any    = false
    disallow_untyped_decorators = false
    disallow_untyped_defs       = true
    exclude                     = ["tests/"]
    follow_imports              = "normal"
    ignore_missing_imports      = true
    junit_xml                   = ".cache/mypy.xml"
    no_implicit_optional        = true
    pretty                      = false
    show_column_numbers         = true
    show_error_codes            = true
    show_error_context          = true
    strict_optional             = false
    warn_redundant_casts        = true
    warn_unreachable            = true
    warn_unused_ignores         = true

[tool.pytest.ini_options]
    addopts               = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --junitxml=.cache/pytest.xml"
    cache_dir             = ".cache/pytest"
    capsys_strip_tmp_path = true
    columns               = 180
    doctest_optionflags   = ["IGNORE_EXCEPTION_DETAIL", "NORMALIZE_WHITESPACE"]
    filterwarnings        = ["error", "ignore::DeprecationWarning", "ignore::ResourceWarning"]
    set_columns           = true
    testpaths             = ["src", "tests"]
    xfail_strict          = true

[tool.hatch.metadata]
    allow-direct-references = true

[tool.ruff] # https://github.com/charliermarsh/ruff
    exclude        = [".cache", ".dev", ".git", ".venv", "_build", "build", "dist", "tmp"]
    fix            = true
    line-length    = 100
    output-format  = "grouped"
    src            = ["src", "tests"]
    target-version = "py311"

    [tool.ruff.lint]
        ignore = [
            "missing-return-type-special-method", # missing return type annotation for special method `__init__`
            "mutable-argument-default",   # mutable-argument-default
            "function-call-in-default-argument",   # function-call-in-default-argument
            "missing-trailing-comma", # Trailing comma missing"
            "missing-copyright-notice", # Missing copyright notice at top of file
            "undocumented-public-init",   # undocumented-public-init
            "multi-line-summary-second-line",   # multi-line-summary-second-line
            "line-too-long",   # line-too-long
            "line-contains-todo", # Line contains TODO, consider resolving the issue
            "missing-todo-author",  # Missing author in TODO
            "missing-todo-link",  # Missing issue link on the line following this TODO
            "non-pep604-annotation-union",  # non-pep604-annotation
        ]
        per-file-ignores = { "tests/*.py" = [
            "builtin-argument-shadowing",
            "builtin-attribute-shadowing",
            "missing-type-function-argument",
            "missing-type-kwargs",
            "missing-return-type-undocumented-public-function",
            "missing-return-type-private-function",
            "missing-return-type-static-method",
            "unused-function-argument",
            "unused-method-argument",
            "unused-lambda-argument",
            "undocumented-public-method",
            "undocumented-param",
            "call-datetime-without-tzinfo",  #datetime called without a `tzinfo` argument
            "true-false-comparison",
            "commented-out-code",
            "undefined-local-with-import-star",
            "blanket-type-ignore",
            "import-private-name",
            "too-many-arguments",
            "too-many-positional-arguments",
            "magic-value-comparison",
            "no-self-use",
            "assert",
            "hardcoded-password-func-arg",    # Possible hardcoded password
            "private-member-access",

        ], "duties.py" = ["missing-type-function-argument"] }
        preview = true
        select = ["ALL"]
        unfixable = [
            "commented-out-code", # Commented out code
            "unused-import",   # unused-import
            "unused-variable",   # unused-variable
        ]
        [tool.ruff.lint.mccabe]
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false
